--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -18,7 +18,7 @@
     <script src="js/lib/angular.min.js" type="text/javascript"></script>
     <script src="resources/config.js" type="text/javascript"></script>
     <script src="js/lib/angular-cookies.min.js" type="text/javascript"></script>
-    <script src="js/lib/smart-table.min.js" type="text/javascript"></script>
+    <!--<script src="js/lib/smart-table.min.js" type="text/javascript"></script>-->
     <script src="js/productManager.js" type="text/javascript"></script>
 
 
@@ -34,7 +34,7 @@
             <li role="presentation" ng-class="{ active: tab.isSet(1) }" class="active"><a href ng-click="tab.setTab(1)">
                 Products</a></li>
 
-            <li role="presentation" ng-class="{ active: tab.isSet(4) }" class=""><a href ng-click="tab.setTab(2)">
+            <li role="presentation" ng-class="{ active: tab.isSet(2) }" class=""><a href ng-click="tab.setTab(2)">
                 Administrateurs</a></li>
 
 
@@ -60,7 +60,6 @@
                     </div>
                     <div class="form-group">
                         <label class="col-md-3 control-label">Type</label>
-
                         <div class="col-md-4">
                             <select name="SelectType" id="SelectType"
                                     ng-options="type as type for type in types"
@@ -112,53 +111,82 @@
 
                     </div>
                 </form>
-                <div class="table-responsive">
+
+
+                <div align="center">
+                    <div class="col-md-4">
+                        <button class="btn btn-info" ng-click="prev()"> < </button>
+                        <button class="btn btn-default" ng-click="next()"> > </button>
+                    </div>
+
+                    <div class="col-md-offset-8">
+                        <select name="selectItemPerPage" id="selectItemPerPage"
+                                ng-model="itemPerPage"
+                                ng-click="pageChanged()">
+                            <option value="10">10</option>
+                            <option value="20">20</option>
+                            <option value="30">30</option>
+                        </select>
+                    </div>
+                </div>
+
+                <div class="table table-responsive">
                     <table class="table table-striped">
                         <thead>
                         <tr>
                             <th>Products existants</th>
-                            <th>Domaine</th>
-                            <th>Campagne</th>
+                            <th>Type</th>
+                            <th>Prix</th>
+                            <th>Quantité</th>
                             <th>Description</th>
                         </tr>
                         </thead>
                         <tbody ng-repeat="product in products">
                         <tr>
                             <td>
-                                <span ng-show="modif(product.id_product)">
+                                <span ng-show="modif(product._id)">
                                 <input type="text" class="form-control ng-valid ng-dirty" ng-model="product.nom_product"
                                        ng-enter="change_product(product)">
                                      </span>
-                                <span ng-show="!modif(product.id_product)">
-                                    {{product.nom_product}}
+                                <span ng-show="!modif(product._id)">
+                                    {{product.name}}
                                 </span>
                             </td>
 
-                            <td>{{product.nom_domaine}}</td>
+                            <td>{{product.productType}}</td>
                             <td>
-                                <span ng-show="modif(product.id_product)">
+                                <span ng-show="modif(product._id)">
                                 <input type="text" class="form-control ng-valid ng-dirty" ng-model="product.nom_campagne"
                                        ng-enter="change_product(product)">
                                      </span>
-                                <span ng-show="!modif(product.id_product)">
-                                    {{product.nom_campagne}}
+                                <span ng-show="!modif(product._id)">
+                                    {{product.price}}
                                 </span>
                             </td>
                             <td>
-                                <span ng-show="modif(product.id_product)">
+                                <span ng-show="modif(product._id)">
                                 <input type="text" class="form-control ng-valid ng-dirty"
                                        ng-model="product.description_product" ng-enter="change_product(product)">
                                      </span>
-                                <span ng-show="!modif(product.id_product)">
-                                    {{product.description_product}}
+                                <span ng-show="!modif(product._id)">
+                                    {{product.quantity}}
+                                </span>
+                            </td>
+                            <td>
+                                <span ng-show="modif(product._id)">
+                                <input type="text" class="form-control ng-valid ng-dirty"
+                                       ng-model="product.description_product" ng-enter="change_product(product)">
+                                     </span>
+                                <span ng-show="!modif(product._id)">
+                                    {{product.description}}
                                 </span>
                             </td>
                             <td align="right">
                                 <div class="btn-group" role="group">
-                                    <button ng-show="!modif(product.id_product)" class="btn btn-primary btn-xs"
-                                            ng-click="modifier(product.id_product)">Modifier
+                                    <button ng-show="!modif(product._id)" class="btn btn-primary btn-xs"
+                                            ng-click="modifier(product._id)">Modifier
                                     </button>
-                                    <button ng-show="modif(product.id_product)" class="btn btn-primary btn-xs"
+                                    <button ng-show="modif(product._id)" class="btn btn-primary btn-xs"
                                             ng-click="change_product(product)">Confirmer
                                     </button>
 
