D - ng show admin

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -43,7 +43,7 @@
 
         </ul>
     </div>
-    <div class="col-sm-9 col-sm--3 col-md-10 main">
+    <div class="col-sm-9 col-sm--3 col-md-10 main" ng-show = "isAdmin">
         <div ng-show="tab.isSet(1)">
             <div class="col-sm-9 col-sm--3 col-md-10 main">
                 <h4>Ajoutez votre Produit</h4>
