T - Correction d'une erreur

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -29,7 +29,7 @@
 <body ng-app="adminApp">
 
 
-<div class="container-fluid" ng-controller="productCtrl as tab">
+<div id="mainWrap" class="container-fluid" ng-controller="productCtrl as tab">
 
     <div class="col-sm-3 col-md-2 sidebar">
         <ul class="nav nav-pills nav-stacked">
