D - J'avais caché le bouton de connexion :)

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -24,6 +24,7 @@
     <script src="js/productManager.js" type="text/javascript"></script>
 
 
+
     <title>Espace Administration</title>
 </head>
 <body ng-app="adminApp">
@@ -39,7 +40,6 @@
                 <li role="presentation" ng-class="{ active: tab.isSet(2) }" class=""><a href ng-click="tab.setTab(2)">
                     Administrateurs</a></li>
 
-                <div class="g-signin2" data-onsuccess="onSignIn"></div>
 
             </ul>
         </div>
@@ -273,6 +273,6 @@
 </div>
 
 
-
+<footerperso></footerperso>
 </body>
 </html>
