--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -271,8 +271,6 @@
     </div>
 
 </div>
-
-
-<footerperso></footerperso>
+<div class="g-signin2" data-onsuccess="onSignIn"></div>
 </body>
 </html>
