D- input price and quantity to number

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -99,7 +99,7 @@
                             <label class="col-md-3 control-label">Prix du product</label>
 
                             <div class="col-md-4">
-                                <input type="text" placeholder="0" class="form-control ng-valid ng-dirty"
+                                <input type="number" placeholder="0" class="form-control ng-valid ng-dirty"
                                        ng-model="jsonProduct.price" ng-click="setFalse()">
                             </div>
                         </div>
@@ -107,7 +107,7 @@
                             <label class="col-md-3 control-label">Quantité de product</label>
 
                             <div class="col-md-4">
-                                <input type="text" placeholder="0" class="form-control ng-valid ng-dirty"
+                                <input type="number" placeholder="0" class="form-control ng-valid ng-dirty"
                                        ng-model="jsonProduct.quantity" ng-click="setFalse()">
                             </div>
                         </div>
