--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -107,7 +107,7 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-md-3 control-label">Quantité de product</label>
+                            <label class="col-md-3 control-label">Quantite de product</label>
 
                             <div class="col-md-4">
                                 <input type="number" placeholder="0" class="form-control ng-valid ng-dirty"
@@ -156,7 +156,7 @@
                                 <th>Products existants</th>
                                 <th>Type</th>
                                 <th>Prix</th>
-                                <th>Quantité</th>
+                                <th>Quantite</th>
                                 <th>Description</th>
                             </tr>
                             </thead>
@@ -298,7 +298,7 @@
         </div>
     </div>
     <div id = "client" ng-show = "isClient">
-        <h1>Bienvenue sur l'interface Réservée aux clients</h1>
+        <h1>Bienvenue sur l'interface Reservee aux clients</h1>
         <h4>Develloppement en cours, vous pouvez en attendant consulter  <a href="api.html">l'api disponible</a></h4>
     </div>
 
