--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -42,7 +42,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-left" href="index.html"><img  src="resources/ffs.jpg" width="80" style="margin-top:2px"> </a>
+            <a class="navbar-left" href="index.html"><img  src="resources/ffs.png" width="80" style="margin-top:2px"> </a>
         </div>
         <div id="navbar" class="navbar-collapse collapse" align="center" style="color: white">
             <h2>FluffyStock</h2>
