B - modification zone client

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -299,7 +299,7 @@
     </div>
     <div id = "client" ng-show = "isClient">
         <h1>Bienvenue sur l'interface Reservee aux clients</h1>
-        <h4>Develloppement en cours, vous pouvez en attendant consulter  <a href="api.html">l'api disponible</a></h4>
+        <h4>Developpement en cours, vous pouvez en attendant consulter  <a href="api.html">l'api disponible</a></h4>
     </div>
 
 </div>
